--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -148,5 +148,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_Send" />
 
+    <Button
+        android:id="@+id/btn_SeeCon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="See Con"
+        tools:layout_editor_absoluteX="14dp"
+        tools:layout_editor_absoluteY="36dp" />
+
 
 </android.support.constraint.ConstraintLayout>
